@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Speedup: Avoid string copy in CXMLReaderImpl::getAttributeByName
 - Fix bug in rect::clipAgainst that had caused rects completely outside to the left-top of the rect to be clipped against ending up with both corners outside.
   It still worked for UI in most cases as the resulting rectangle still had an area of 0.
 - Add getAlign functions to IGUIElement
